--- a/antesDePrimerParcial/codigoJournalJS/index.html
+++ b/antesDePrimerParcial/codigoJournalJS/index.html
@@ -32,44 +32,107 @@
             </div>
         </header>
         <main>
-        <div class="section-1">
-            <div class="container">
-                <div class="grid rows-3">
-                    <div class="grid rows1-2">
-                        <div class="icon text-center"><i class="far fa-sun"></i></div>
-                        <div>
-                            <h4>visuales</h4>
+            <section class="section-1">
+                <div class="container">
+                    <div class="grid rows-3">
+                        <div class="grid rows1-2">
+                            <div class="icon text-center column justify-center"><i class="far fa-sun"></i></div>
+                            <div>
+                                <h4>VISUALES</h4>
 
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga quibusdam
-                                praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga
+                                    quibusdam
+                                    praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                            </div>
+
                         </div>
+
+                        <div class="grid rows1-2">
+                            <div class="icon text-center column justify-center"><i class="far fa-sun"></i></div>
+                            <div>
+                                <h4>VISUALES</h4>
+
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga
+                                    quibusdam
+                                    praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                            </div>
+
+                        </div>
+
+                        <div class="grid rows1-2">
+                            <div class="icon text-center column justify-center"><i class="far fa-sun"></i></div>
+                            <div>
+                                <h4>VISUALES</h4>
+
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga
+                                    quibusdam
+                                    praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="section-2 gradient-bg">
+                <div class="container height100">
+                    <div>
 
                     </div>
+                    <div class="grid rows-4 columns-2">
 
-                    <div class="grid rows1-2">
-                        <div class="icon text-center"><i class="far fa-sun"></i></div>
-                        <div>
-                            <h4>visuales</h4>
-
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga quibusdam
-                                praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
                         </div>
-
-                    </div>
-
-                    <div class="grid rows1-2">
-                        <div class="icon text-center"><i class="far fa-sun"></i></div>
-                        <div>
-                            <h4>visuales</h4>
-
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quod fuga quibusdam
-                                praesentium enim voluptatibus excepturi voluptates sed adipisci quos.</p>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
                         </div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="height100">
+                                ola
+                            </div>
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
 
                     </div>
                 </div>
             </div>
-        </div>
         </main>
     </div>
 </body>
