--- a/antesDePrimerParcial/codigoJournalJS/index.html
+++ b/antesDePrimerParcial/codigoJournalJS/index.html
@@ -76,63 +76,112 @@
 
             <div class="section-2 gradient-bg">
                 <div class="container height100">
-                    <div>
+                    <div class="text-center section2-header">
+                        <h3 class="white">Our Offered Services</h3>
+
+                        <h5 class="white"><span>RE-IMAGINING THE WAY</span> </h5>
 
                     </div>
-                    <div class="grid rows-4 columns-2">
+                    <section class="grid rows-4 columns-2">
 
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
                         <div class="img">
-                            <div class="height100">
-                                ola
+                            <div class="height100 column justify-center">
+                                <button class="button gradient-bg"> get Started</button>
                             </div>
                         </div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
+                        <div class="white column justify-center">
+                            <h6>CREATIVE DESIGN</h6>
+                            <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                upgrades in</p>
+                        </div>
 
-                    </div>
                 </div>
             </div>
+            </section>
+
+            <section class="section-3">
+                <div class="width100 height100">
+                    <div class="row width100 height100">
+                        <div class="flex50 gradient-bg">
+                            <h3>Our Untold Story</h3>
+                        </div>
+
+                        <div id="story-bg" class="flex50">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
