--- a/antesDePrimerParcial/codigoJournalJS/index.html
+++ b/antesDePrimerParcial/codigoJournalJS/index.html
@@ -74,99 +74,138 @@
                 </div>
             </section>
 
-            <div class="section-2 gradient-bg">
-                <div class="container height100">
-                    <div class="text-center section2-header">
-                        <h3 class="white">Our Offered Services</h3>
+            <section class="section-2 gradient-bg">
+                <div class="container">
+                    <div class="grid rows-4 colums-2 grid-gap">
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
 
-                        <h5 class="white"><span>RE-IMAGINING THE WAY</span> </h5>
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
 
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
+
+                        <div class="column justify-center">
+                            <div>
+                                <div class="img flex1">
+                                    <div class="column justify-center">
+                                        <button class="button gradient-bg">Get Started</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="white">
+                                <h3>CREATIVE DESIGN</h3>
+                                <p>WordPress, the premier free open-source blogging utility, has gone through several
+                                    upgrades in</p>
+                            </div>
+                        </div>
                     </div>
-                    <section class="grid rows-4 columns-2">
-
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="img">
-                            <div class="height100 column justify-center">
-                                <button class="button gradient-bg"> get Started</button>
-                            </div>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-                        <div class="white column justify-center">
-                            <h6>CREATIVE DESIGN</h6>
-                            <p>WordPress, the premier free open-source blogging utility, has gone through several
-                                upgrades in</p>
-                        </div>
-
                 </div>
-            </div>
             </section>
 
             <section class="section-3">
