agregando resposive section 3

--- a/antesDePrimerParcial/codigoJournalJS/index.html
+++ b/antesDePrimerParcial/codigoJournalJS/index.html
@@ -218,6 +218,18 @@
                         <div id="story-bg" class="flex50">
 
                         </div>
+
+                        <div class="p-absolute bg-white column justify-content-bw">
+                            <div>
+                                <h3>FROM THE PART</h3>
+
+                                <p>Usage of the Internet is becoming more common due to rapid advancement of technology
+                                    and the power of globalization. Societies are becoming more inter-connected.
+                                    Thoughts from different</p>
+
+                                <button class="button gradient-bg">Get Started</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
