agregando un repo

--- a/antesDePrimerParcial/codigoJournalJS/index.html
+++ b/antesDePrimerParcial/codigoJournalJS/index.html
@@ -79,8 +79,8 @@
                     <div class="grid rows-4 colums-2 grid-gap">
                         <div class="column justify-center">
                             <div>
-                                <div class="img flex1">
-                                    <div class="column justify-center">
+                                <div class="img flex1 ">
+                                    <div class="column justify-center smooth-transition">
                                         <button class="button gradient-bg">Get Started</button>
                                     </div>
                                 </div>
